// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> component should have the default props values when mounted 1`] = `
Object {
  "activeClass": "active",
  "activeClassName": "active",
  "aria": false,
  "checkboxClass": "icheckbox",
  "checkboxClassName": "icheckbox",
  "checked": false,
  "checkedClass": "checked",
  "checkedClassName": "checked",
  "children": null,
  "className": null,
  "defaultChecked": false,
  "determinateClass": null,
  "disabled": false,
  "disabledClass": "disabled",
  "disabledClassName": "disabled",
  "focusClass": "focus",
  "focusClassName": "focus",
  "hoverClass": "hover",
  "hoverClassName": "hover",
  "id": null,
  "increaseArea": "",
  "indeterminate": true,
  "indeterminateClass": "indeterminate",
  "inheritClass": false,
  "inheritID": false,
  "insert": null,
  "label": null,
  "labelClassName": null,
  "labelHover": true,
  "labelHoverClass": "hover",
  "labelTag": "span",
  "labelTagClassName": null,
  "name": null,
  "onBlur": null,
  "onChange": null,
  "onFocus": null,
  "onMouseDown": null,
  "onMouseLeave": null,
  "onMouseUp": null,
  "onTouchEnd": null,
  "onTouchStart": null,
  "type": null,
  "value": "",
}
`;

exports[`<Checkbox /> component should render the corresponding HTML when only the default props are set 1`] = `
<div
  class="icheckbox indeterminate"
>
  <input
    style="opacity:0;position:absolute"
    type="checkbox"
    value=""
  />
  <ins
    class="iCheck-helper"
    role="presentation"
    style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
  />
</div>
`;

exports[`<Checkbox /> component should render the corresponding HTML when the label is set as a prop string value 1`] = `
<label>
  <div
    class="icheckbox indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="checkbox"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <span>
    label
  </span>
</label>
`;

exports[`<Checkbox /> component should render the corresponding HTML when the label is set as children with labelTag prop set to <div /> 1`] = `
<label>
  <div
    class="icheckbox indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="checkbox"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <div>
    <span>
      label
    </span>
  </div>
</label>
`;
